[gd_scene format=3 uid="uid://ebo8g81tnm2"]

[ext_resource type="Script" uid="uid://bfhdr6pllvdob" path="res://scenes/ui/buttons/action_button/action_button.gd" id="1_eh05r"]
[ext_resource type="Resource" uid="uid://cwft1llqhhvm3" path="res://game_data/game_progression/upgrades/upgrade_work_power.tres" id="3_eso0p"]
[ext_resource type="PackedScene" uid="uid://rpsmp7qml63x" path="res://core/components/cost_component/cost_component.tscn" id="3_hlq6p"]
[ext_resource type="PackedScene" uid="uid://ci5gf3i2xpxe5" path="res://core/components/reward_component/reward_component.tscn" id="4_0hr7k"]
[ext_resource type="PackedScene" uid="uid://bisxuota8wv3p" path="res://core/components/message_component/message_component.tscn" id="5_e4x4h"]
[ext_resource type="PackedScene" uid="uid://7sibx1jnc6bo" path="res://core/components/streak_component/streak_component.tscn" id="6_q48mf"]

[node name="ActionButton" type="Button" unique_id=2145561688 node_paths=PackedStringArray("cost_component", "reward_component", "message_component", "streak_component", "progress_bar")]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_eh05r")
cost_component = NodePath("CostComponent")
reward_component = NodePath("RewardComponent")
message_component = NodePath("MessageComponent")
streak_component = NodePath("StreakComponent")
primary_upgrade = ExtResource("3_eso0p")
progress_bar = NodePath("ProgressBar")

[node name="ProgressBar" type="TextureProgressBar" parent="." unique_id=1836099]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=820562729]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1214815690]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="MarginContainer/HBoxContainer" unique_id=2002767569]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1342704571]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=518402674]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
autowrap_mode = 3

[node name="DetailsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=2001663791]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
text_overrun_behavior = 3

[node name="CooldownTimer" type="Timer" parent="." unique_id=204163779]
wait_time = 2.0
one_shot = true

[node name="CostComponent" parent="." unique_id=1617079401 instance=ExtResource("3_hlq6p")]

[node name="RewardComponent" parent="." unique_id=1145428241 instance=ExtResource("4_0hr7k")]

[node name="MessageComponent" parent="." unique_id=1824163825 instance=ExtResource("5_e4x4h")]

[node name="StreakComponent" parent="." unique_id=1249277162 node_paths=PackedStringArray("cost_component", "reward_component") instance=ExtResource("6_q48mf")]
cost_component = NodePath("../CostComponent")
reward_component = NodePath("../RewardComponent")
